preprod-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: prod-ing
  namespace: prod
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: prod
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
